# ida-pattern-maker

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Main.cpp  Plugin.cpp  Plugin.hpp
